--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,3 @@
-#Options +FollowSymLinks
-
-#RewriteEngine on
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule ^([^?]*)$ /index.html [NC,L]
+RewriteEngine On
+RewriteCond %{HTTPS} !=on
+RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
