--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
   "license": "ISC",
   "repository": "",
   "scripts": {
-    "start": "gulp"
+    "start": "http-server"
   },
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-server-livereload": "^1.9.2",
-    "gulp-watch": "^4.3.11"
+    "http-server": "^0.11.1"
   }
 }
