--- a/package.json
+++ b/package.json
@@ -4,8 +4,5 @@
   "description": "A service to show your current IP address.",
   "author": "Marcus Törnroth",
   "license": "ISC",
-  "repository": "",
-  "scripts": {
-    "start": "http-server"
-  }
+  "repository": ""
 }
